--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ramda": "^0.23.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-motion": "^0.4.7"
