--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel": "^5.8.23",
+    "babel-browser-transform": "^0.1.0",
+    "babel-core": "^5.6.18",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^5.3.1",
+    "eslint-config-airbnb": "^14.1.0",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-motion": "^0.4.7"
+    "react-hot-loader": "^1.2.8",
+    "react-motion": "^0.4.7",
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.10.1"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "test": "react-scripts test --env=jsdom"
   }
 }
